# projekt

./: CMakeLists.txt  README.md  czerwone  czerwone_video  zielone
